--- a/.air.toml
+++ b/.air.toml
@@ -10,8 +10,8 @@ tmp_dir = "bin"
   cmd = "go build -o ./bin/main.exe ./cmd/api"
   delay = 1000
   entrypoint = ["bin\\main.exe"]
-  exclude_dir = ["assets", "bin", "vendor", "testdata", "web", "docs", "scripts", ".git", ".gitignore"]
-  exclude_file = []
+  exclude_dir = ["assets", "bin", "vendor", "testdata", "web", "docs", "scripts"]
+  exclude_file = [".git", ".gitignore"]
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
